Sun Dec 10 11:59:33 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* depend.am (DEP_FILES): Bug fix.

	* automake.in (do_one_clean_target): Typo.

	* Makefile.am (check-local): Run syntax check under Perl 4.

	* automake.in: Fixes for Perl 4, from Gord Matzigkeit.
	(handle_source_transform): Loop variable is now $_.  From Gor

	* Makefile.am (check-local): Check for 'true' in source.
	* texinfos.am (install-info): Can't use "true" in any rule.

Sat Dec  9 10:16:48 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* Makefile.am (cvs-dist): New target.

	* tags.am (TAGS): Use "test -z ... ||" to avoid spurious
	failures.

	* texinfos.am (install-info): Don't do install-info for now.

	* clean.am (distclean-generic): Don't remove config.status here.
	* automake.in (do_one_clean_target): Remove config.status later,
	for 'make -j2'.  From Jim Meyering.

Fri Dec  8 16:30:48 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* configure.in (VERSION): Version 0.25.

	* automake.in (handle_texinfo): Use "$? >> 8", not "$?".
	(handle_configure): Check for AC_PROG_MAKE_SET.

	* depend.am (DEP_FILES): Handle deANSIfication case.  From Jim
	Meyering.

	* automake.in (am_install_var): Changed how 'clean' handled for
	uniform name targets.
	* Makefile.am (pkgdata_DATA): Added new files.
	* data-clean.am: New file.
	* scripts-clean.am: New file.
	* libraries-clean.am: New file.
	* programs-clean.am: New file.

Wed Dec  6 00:06:11 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* automake.in (am_install_var): Error if variable name
	"misspelled".
	(handle_source_transform): Automatically include .c file
	corresponding to .y or .l.

Tue Dec  5 00:46:14 1995  Tom Tromey  <tromey@cambric.colorado.edu>

	* programs.am: Changed for uniform naming scheme.

	* automake.in (read_am_file): Allow '-' and '.' in target names.
	(generate_makefile): Don't pass arguments to handle_libraries.
	(initialize_per_input): Define @sources, @objects.