@@ -1,5 +1,8 @@
 Sun Dec 10 11:59:33 1995  Tom Tromey  <tromey@cambric.colorado.edu>
 
+	* Makefile.am (check-local): Only look at [a-z]*.am.  Fixed sense
+	of 'if' test.
+
 	* depend.am (DEP_FILES): Bug fix.
 
 	* automake.in (do_one_clean_target): Typo.
